Fixed image display on small screen in 'Pick Restaurants' tab

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -264,7 +264,7 @@ ul span {
   }
 }
 
-@media only screen and (max-width: 685px) {
+@media only screen and (min-width: 476px) and (max-width: 685px) {
   .pickedRestaurants .restaurant-image {
     display: none;
   }
